# PROGDAS-CASHIER

./: .gitignore  README.md  cafe  cashier  cashier.cpp  main.cpp
DOPIYO-CONSOLE/: Menu.txt  cashier.h  main.cpp
DOPIYO-GUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  menuorder.h  nota.ui  ordermanager.h  payment.cpp  payment.h  payment.ui
DOPIYO-GUI/data/: Menu.txt
DOPIYO-GUI/include/: cart.h  customername.h  nota.h
DOPIYO-GUI/resources/: fotoQR.qrc
DOPIYO-GUI/src/: cart.cpp  customername.cpp  menuorder.cpp  nota.cpp  ordermanager.cpp
DOPIYO-GUI/ui/: cart.ui  mainwindow.ui  menuorder.ui
PROTOTYPE/: Progdas-Final-Project  cashier.cpp  cashier.h  main.cpp
